# AI-CodeNexus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  data.db  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
.well-known/pki-validation/: fileauth.txt
app/: ARCHITECTURE.md  config_loader.py  main.py
app/crawlers/: devmaster.py  github_trending.py  hackernews.py  rss.py  sogou_wechat.py
app/db/: __init__.py  database.py  models.py
app/infrastructure/: __init__.py  file_lock.py  logging.py  scheduler.py
app/notifier/: wechat_mp.py  wecom.py
app/presentation/: __init__.py  templates.py
app/routes/: __init__.py  ai_assistant.py  api.py  digest.py
app/services/: __init__.py  backup_service.py  crawler_service.py  data_loader.py  digest_service.py  weekly_digest.py
app/sources/: ai_articles.py  ai_candidates.py  article_crawler.py  article_sources.py  tool_candidates.py
config/: ai_articles.json  crawler_keywords.json  digest_schedule.json  tool_keywords.json  wecom_template.json
data/: README.md  ai_articles.json  ai_candidates.json  config.json  prompts.json  resources.json  rules.json
docs/: 403_error_troubleshooting.md  COMMUNITY_RESOURCES.md  IMPORT_FEISHU_PROMPTS.md  README.md  baota_deploy.md  deploy_baota.md  deploy_python.md  deploy_windows.md  features_v2.md  nginx_config_example.conf  quick_diagnose.sh
scripts/: add_tool_identifiers.py  fix_expired_links.py  fix_weekly_md.py  remove_expired_articles.py  test_wechat_mp.py
tests/: test_archive_feature.py  test_crawlers.py  test_data_loader.py
(+58 files in other folders)
